--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,12 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="192x192" href="./img/favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./img/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon//apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="./img/favicon/favicon.ico">
     <title>DevDemons</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
