--- a/src/index.html
+++ b/src/index.html
@@ -56,5 +56,6 @@
       <load src="partials/testimonials.html"/>
     </main>
     <load src="partials/footer.html"/>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
